Creating a login page to display our application

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="blessing">صلوات</string>
     <string name="reset">ریست</string>
     <string name="Zero">0</string>
+    <string name="blessing_SplashScreen">صلوات شمار</string>
 </resources>
